fix search results on small screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,6 +27,12 @@
   --block-padding: 4rem;
   --main-padding: var(--block-padding) var(--inline-padding);
 }
+@media only screen and (max-width: 56.25em) {
+  :root {
+    --inline-padding: 8rem;
+    --block-padding: 5rem;
+  }
+}
 
 html {
   font-size: 62.5%;
@@ -142,6 +148,7 @@ select {
     width: 100%;
     min-height: 100vh;
     border-radius: 0;
+    box-shadow: none;
   }
 }
 @media only screen and (max-width: 56.25em) {
@@ -176,6 +183,8 @@ select {
   .search-results {
     grid-column: 1/-1;
     grid-row: 2/3;
+    overflow-x: auto;
+    width: 100vw;
   }
 }
 
@@ -571,7 +580,7 @@ a:visited {
 .details {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
   padding: var(--main-padding);
   background-color: var(--clr-light-200);
@@ -693,6 +702,7 @@ a:visited {
 @media only screen and (max-width: 56.25em) {
   .results {
     flex-direction: row;
+    overflow-x: auto;
   }
 }
 
@@ -703,6 +713,12 @@ a:visited {
   gap: 1em;
   padding: var(--main-padding);
 }
+@media only screen and (max-width: 56.25em) {
+  .pag {
+    padding: calc(var(--block-padding) / 2) calc(var(--inline-padding) / 2);
+    gap: 2em;
+  }
+}
 .pag__btn {
   width: 3rem;
   height: 3rem;
@@ -712,6 +728,11 @@ a:visited {
 .preview {
   height: 14rem;
   display: block;
+}
+@media only screen and (max-width: 56.25em) {
+  .results .preview {
+    min-width: 40rem;
+  }
 }
 .preview__link:link, .preview__link:visited {
   height: 100%;
