--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -121,6 +121,7 @@ select {
       min-height: 100vh;
 
       border-radius: 0;
+      box-shadow: none;
    }
 
    @include responsive($bp-s) {
@@ -148,6 +149,7 @@ select {
 .search-results {
    grid-column: 1 / 1;
    grid-row: 2 / -1;
+
    display: flex;
    flex-direction: column;
    justify-content: space-between;
@@ -155,6 +157,9 @@ select {
    @include responsive($bp-s) {
       grid-column: 1 / -1;
       grid-row: 2 / 3;
+
+      overflow-x: auto;
+      width: 100vw;
    }
 }
 
