--- a/src/scss/_recipe.scss
+++ b/src/scss/_recipe.scss
@@ -47,7 +47,7 @@
 .details {
    display: flex;
    flex-direction: row;
-   justify-content: space-evenly;
+   justify-content: space-between;
    align-items: center;
 
    padding: var(--main-padding);
